# JULO_mini_wallet

./: .env.example  .python-version  README.md  pyproject.toml
migrations/versions/: 94fdb9998ac6_init_db.py  bccc75730af2_init_db.py
mini_wallet/: __init__.py  app.py  config.py  env.py
mini_wallet/blueprints/: wallet.py
mini_wallet/controllers/: transaction.py  wallet.py
mini_wallet/enumerations/: commons.py  transaction.py  wallet.py
mini_wallet/models/: base_model.py  customer_token.py  transaction.py  wallet.py
mini_wallet/resources/: transaction.py  transaction_deposit.py  transaction_withdrawal.py  wallet.py  wallet_init.py
mini_wallet/schemas/: commons.py  transactions.py  wallet.py  wallet_init.py
mini_wallet/tools/: decorators.py  responses.py  token.py
